# les-campai-connector

./: .env  .env.example  .git-blame-ignore-revs  Dockerfile  README.md  main.py  pyproject.toml
docker/: 01-restore.sh  Dockerfile  README.md  compose.yml
les_campai_connector/: cli.py  config.py  kc.py  main.py  uptime.py
les_campai_connector/campai/: __init__.py  client.py  model.py  params.py
