[project]
name = "automatic-on-and-offboarding"
version = "0.1.0"
description = ""
authors = [
    {name = "Maximilian Jugl",email = "git@eulenbu.de"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "python-keycloak (>=5.8.1,<6.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "unidecode (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)"
]

[project.scripts]
lcc = "les_campai_connector.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "les_campai_connector" }
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.2"

[tool.ruff]
line-length = 120
